fixing overflow take 11111

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Cormorant:wght@300&family=Indie+Flower&family=Julius+Sans+One&family=Playfair+Display&display=swap");
 
+html,
 body {
   font-family: "Julius Sans One", sans-serif;
   color: #002d72;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 @layer base {
@@ -28,14 +29,13 @@ body {
     to right,
     rgba(112, 157, 255, 0.8),
     hsla(242, 74%, 61%, 0.8)
-  ) !important;
+  );
 }
 
 .contact-image-container {
   animation-name: flying-mango;
   animation-duration: 6s;
   animation-iteration-count: infinite;
-  position: absolute;
   top: -80;
   left: 0;
 }
